# agentic-ai-immersion

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_and_capture.py  run_qt.sh  run_test.sh
.devcontainer/: devcontainer.json
agent-framework/: MIGRATION_GUIDE.md
agent-framework/agents/azure-ai-agents/: 1-azure-ai-basic.ipynb  2-azure-ai-with-explicit-settings.ipynb  3-azure-ai-with-existing-ai-agent.ipynb  4-azure-ai-with-function-tools.ipynb  5-azure-ai-with-code-interpreter.ipynb  6-azure-ai-with-file-search.ipynb  7-azure-ai-with-bing-grounding.ipynb  8-azure-ai-with-hosted-mcp.ipynb  9-azure-ai-with-existing-multi-turn-thread.ipynb
agent-framework/context-providers/: 1-simple-context-provider.ipynb  2-azure-ai-search-context-agentic.ipynb
agent-framework/middleware/: 1-agent-and-run-level-middleware.ipynb  2-function-based-middleware.ipynb  3-class-based-middleware.ipynb  4-decorator-middleware.ipynb  5-chat-middleware.ipynb  6-exception-handling-with-middleware.ipynb  7-middleware-termination.ipynb  8-override-result-with-middleware.ipynb  9-shared-state-middleware.ipynb
agent-framework/observability/: 1-agent-with-foundry-tracing.ipynb  2-azure-ai-agent-observability.ipynb  3-workflow-observability.ipynb
agent-framework/threads/: 1-custom-chat-message-store-thread.ipynb  2-redis-chat-message-store-thread.ipynb  3-suspend-resume-thread.ipynb
agent-framework/workflows/: 1-azure-ai-agents-streaming.ipynb  10-handoff-customer-support.ipynb  11-group-chat-collaborative-agents.ipynb  2-azure-chat-agents-streaming.ipynb  3-sequential-agents-loan-application.ipynb  4-sequential-custom-executors-compliance.ipynb  5-credit-limit-with-human-input.ipynb  6-workflow-as-agent-human-in-the-loop-transaction-review.ipynb  7-magentic-compliance-review-with-human-input.ipynb  8-magentic-investment-research.ipynb  9-workflow-as-agent-reflection-pattern.ipynb  README.md
azure-ai-agents/: 1-basics.ipynb  2-code-interpreter.ipynb  3-file-search.ipynb  4-bing-grounding.ipynb  5-agents-aisearch.ipynb  6-multi-agent-solution-with-workflows.ipynb  7-mcp-tools.ipynb  8-foundry-IQ-agents.ipynb  9-agent-memory-search.ipynb
byouc/: Agentic_UseCase_Spec.docx  Agentic_UseCase_Spec.md
hosted-agents/: README.md  agent.yaml
hosted-agents/src/WebSearchAgent/: main.py  quick_test.py  test_agent.py
observability-and-evaluations/: 1-telemetry.ipynb  2-agent-evaluation.ipynb  3-agent-evaluation-with-function-tools.ipynb  4-tool-call-accuracy-evaluation.ipynb  5-red-team-security-testing.ipynb
src/labs/: agent.py  client.py  lab01_basics.py  lab02_code_interpreter.py  lab03_file_search.py  lab07_mcp_tools.py  lab09_agent_memory.py  list_agents.py  list_vector_stores.py
src/labs/agents/: lab01_basics.py  lab02_code_interpreter.py  lab03_file_search.py  (+4 more)
(+4 files in other folders)
