[project]
name = "agentic-ai-immersion"
version = "0.1.0"
description = "Agentic AI Immersion Workshop — lean setup for hands-on labs"
requires-python = ">=3.11"

dependencies = [
    # Lab 1: Azure AI Agents basics
    "azure-ai-projects>=2.0.0b1",
    "azure-identity>=1.15.0",
    "python-dotenv>=1.0.0",
    # Jupyter kernel so notebooks can run
    "ipykernel>=6.29.0",
]

[project.optional-dependencies]
# Install progressively as you reach later labs
search = [
    "azure-search-documents>=11.7.0b2",
    "azure-mgmt-core>=1.4.0",
]
agent-framework = [
    "agent-framework-azure-ai",
    "agent-framework-redis",
]
observability = [
    "azure-monitor-opentelemetry>=1.6.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]
all = [
    "agentic-ai-immersion[search,agent-framework,observability]",
]
